fix spacing and image fit

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -7,6 +7,7 @@
 .header {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 
 .header h4 {
